--- a/Day-1/index-with-js.html
+++ b/Day-1/index-with-js.html
@@ -9,7 +9,13 @@
 </head>
 
 <body>
-    <h1>React Hello World</h1>
 </body>
+
+<script>
+    const heading = document.createElement("h1")
+    const root = document.getElementById('root')
+    heading.innerHTML = 'JS Hello World'
+    document.body.appendChild(heading)
+</script>
 
 </html>
