--- a/Day-1/index-with-react.html
+++ b/Day-1/index-with-react.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Day-1</title>
 </head>
+
 <body>
-    
+    <div id="root">
+        Not Rendered
+    </div>
 </body>
+
+<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
+<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+<script>
+    const heading1 = React.createElement('h1',
+        {
+            style: { color: "red" },
+            className: 'header_one'
+        },
+        'React H1')
+    const heading2 = React.createElement('h2', {}, 'React H2')
+    const container = React.createElement('div', {
+        className: 'container'
+    })
+    const root = ReactDOM.createRoot(document.getElementById('root'))
+    root.render([heading1, heading2])
+</script>
+
 </html>
